--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "start": "webpack-dev-server --open",
-    "server": "node server.js"
+    "dev": "webpack-dev-server --open",
+    "serve": "webpack-dev-server --open",
+    "backend": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +24,7 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
+    "svg-inline-loader": "^0.8.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-middleware": "^3.7.0",
